--- a/main.html
+++ b/main.html
@@ -6,10 +6,11 @@
 
     <title>Coffee Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar section-content">
         <a href="#" class="nav-logo">
             <h2 class="logo-text">Coffee</h2>
         </a>
@@ -17,33 +18,42 @@
             <li class="nav-item">
                 <a href="" class="nav-link">Home</a>
             </li>
-        </ul>
-        <ul class="nav-menu">
             <li class="nav-item">
                 <a href="" class="nav-link">About</a>
             </li>
-        </ul>
-        <ul class="nav-menu">
             <li class="nav-item">
                 <a href="" class="nav-link">Menu</a>
             </li>
-        </ul>
-        <ul class="nav-menu">
             <li class="nav-item">
                 <a href="" class="nav-link">Testimonials</a>
             </li>
-        </ul>
-        <ul class="nav-menu">
             <li class="nav-item">
                 <a href="" class="nav-link">Gallery</a>
             </li>
-        </ul>
-        <ul class="nav-menu">
             <li class="nav-item">
                 <a href="" class="nav-link">Contact us</a>
             </li>
         </ul>
     </nav>
     </header>
+    <main>
+        <section class="hero-section">
+            <div class="section-content">
+                <div class="hero-details">
+                    <h2 class="title">Best Coffee</h2>
+                    <h3 class="subtitle">Make your day great with our special coffee!</h3>
+                    <p class="description">Welcome to our coffee paradise, where every bean tells a story and every cup spaarks joy.</p>
+                
+                <div class="buttons">
+                    <a href="" class="button order-now">Order Now!!!</a>
+                    <a href="" class="button contact-us">Contact -Us</a>
+                </div>
+                </div>
+                <div class="hero-image-wrapper">
+                    <img src="coffeee-img.jpg" alt="Loading" class="hero-image">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
